--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
 <script type="module">
-  import { grid } from "../dist/index.js"
-  console.log(grid({ rows: 3 }))
+  import { grid } from "../dist/index.js";
+  console.log(grid({ rows: 3 }));
 </script>
